--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "tabWidth": 2
   },
   "devDependencies": {
+    "@commitlint/cli": "^8.3.5",
+    "@commitlint/config-conventional": "^8.3.4",
     "@types/jest": "^25.1.4",
     "@types/node": "^13.9.3",
     "@typescript-eslint/eslint-plugin": "^2.24.0",
@@ -33,6 +35,7 @@
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-prettier": "^3.1.2",
+    "husky": "^4.2.5",
     "jest": "^25.1.0",
     "prettier": "^2.0.1",
     "ts-jest": "^25.2.1",
@@ -40,5 +43,10 @@
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.8.3",
     "typescript-eslint": "^0.0.1-alpha.0"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   }
 }
