chore: add description and keyword fields to package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@soufantech/package-ts",
   "version": "1.0.0",
-  "main": "dist/index.js",
+  "description": "A TypesScript boilerplate for building Node packages.",
+  "keywords": [],
   "author": {
     "name": "Fábio Priamo",
     "email": "fabio@soufan.com.br",
@@ -9,10 +10,11 @@
   },
   "license": "UNLICENSED",
   "private": true,
-  "types": "dist/index.d.ts",
   "publishConfig": {
     "access:": "restricted"
   },
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "watch": "ts-node-dev src/index.ts",
     "start": "ts-node src/index.ts",
@@ -20,12 +22,6 @@
     "test": "jest --detectOpenHandles --forceExit",
     "clean": "rm -rf dist",
     "lint": "tsc --noEmit && eslint ./src/**/*"
-  },
-  "prettier": {
-    "semi": true,
-    "trailingComma": "all",
-    "singleQuote": true,
-    "tabWidth": 2
   },
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
@@ -47,6 +43,12 @@
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.8.3",
     "typescript-eslint": "^0.0.1-alpha.0"
+  },
+  "prettier": {
+    "semi": true,
+    "trailingComma": "all",
+    "singleQuote": true,
+    "tabWidth": 2
   },
   "husky": {
     "hooks": {
