--- a/package.json
+++ b/package.json
@@ -16,35 +16,32 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "watch": "ts-node-dev src/index.ts",
-    "start": "ts-node src/index.ts",
-    "test": "jest --detectOpenHandles --forceExit",
-    "lint": "eslint ./src/**/*.{ts,tsx}",
-    "lint-hard": "tsc --noEmit && yarn run lint",
+    "test": "jest",
+    "lint": "tsc --noEmit && eslint ./src/**/*.{ts,tsx}",
     "clear": "rm -rf dist",
     "build": "tsc",
-    "rebuild": "rm -rf dist && tsc",
-    "pre-publish": "yarn run rebuild && yarn run test --silent"
+    "rebuild": "npm run clear && npm run build",
+    "prepublishOnly": "npm run rebuild && npm run test --silent"
   },
   "devDependencies": {
-    "@commitlint/cli": "^8.3.5",
-    "@commitlint/config-conventional": "^8.3.4",
-    "@types/jest": "^25.1.4",
-    "@types/node": "^13.9.3",
-    "@typescript-eslint/eslint-plugin": "^2.24.0",
-    "@typescript-eslint/parser": "^2.24.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-prettier": "^3.1.2",
+    "@commitlint/cli": "^9.1.1",
+    "@commitlint/config-conventional": "^9.1.1",
+    "@types/jest": "^26.0.4",
+    "@types/node": "^14.0.23",
+    "@typescript-eslint/eslint-plugin": "^3.6.1",
+    "@typescript-eslint/parser": "^3.6.1",
+    "eslint": "^7.4.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.2.5",
-    "jest": "^25.1.0",
-    "prettier": "^2.0.1",
-    "ts-jest": "^25.2.1",
-    "ts-node": "^8.8.1",
-    "ts-node-dev": "^1.0.0-pre.44",
-    "typescript": "^3.8.3",
+    "jest": "^26.1.0",
+    "prettier": "^2.0.5",
+    "ts-jest": "^26.1.2",
+    "ts-node": "^8.10.2",
+    "ts-node-dev": "^1.0.0-pre.52",
+    "typescript": "^3.9.6",
     "typescript-eslint": "^0.0.1-alpha.0"
   },
   "prettier": {
