--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "test": "jest",
     "lint": "tsc --noEmit && eslint ./src/**/*.{ts,tsx}",
     "clear": "rm -rf dist",
-    "build": "tsc",
+    "build": "tsc -p ./tsconfig.build.json",
     "rebuild": "npm run clear && npm run build",
     "prepublishOnly": "npm run rebuild && npm run test --silent"
   },
