--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "jest",
+    "test": "jest --pass-with-no-tests",
     "lint": "tsc --noEmit && eslint ./src/**/*.{ts,tsx}",
     "clear": "rm -rf dist",
     "build": "tsc -p ./tsconfig.build.json",
