--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "test": "jest --pass-with-no-tests",
     "lint": "tsc --noEmit && eslint ./src/**/*.{ts,tsx}",
     "clear": "rm -rf dist",
+    "prebuild": "npm run clear",
     "build": "tsc -p ./tsconfig.build.json",
-    "rebuild": "npm run clear && npm run build",
-    "prepublishOnly": "npm run rebuild && npm run test --silent"
+    "prepublishOnly": "npm run build && npm run test --silent"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
