--- a/package.json
+++ b/package.json
@@ -32,24 +32,24 @@
     "prepublishOnly": "npm run build && npm run test --silent"
   },
   "devDependencies": {
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-conventional": "^11.0.0",
-    "@types/jest": "^26.0.4",
-    "@types/node": "^14.0.23",
-    "@typescript-eslint/eslint-plugin": "^4.15.0",
-    "@typescript-eslint/parser": "^4.15.0",
-    "eslint": "^7.4.0",
+    "@commitlint/cli": "^12.1.1",
+    "@commitlint/config-conventional": "^12.1.1",
+    "@types/jest": "^26.0.22",
+    "@types/node": "^14.14.37",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "eslint": "^7.24.0",
     "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-config-prettier": "^7.2.0",
+    "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "husky": "^5.0.9",
+    "husky": "^6.0.0",
     "jest": "^26.1.0",
     "prettier": "^2.0.5",
-    "ts-jest": "^26.1.2",
+    "ts-jest": "^26.5.4",
     "ts-node": "^9.1.1",
-    "ts-node-dev": "^1.0.0-pre.52",
-    "typescript": "^4.1.4",
+    "ts-node-dev": "^1.1.6",
+    "typescript": "^4.2.4",
     "typescript-eslint": "^0.0.1-alpha.0"
   },
   "prettier": {
