--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
+    "start": "ts-node src/index.ts",
+    "watch": "ts-node-dev src/index.ts",
     "test": "jest --pass-with-no-tests",
     "lint": "tsc --noEmit && eslint ./src/**/*.{ts,tsx}",
     "clear": "rm -rf dist",
