--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "semi": true,
     "trailingComma": "all",
     "singleQuote": true,
-    "tabWidth": 2
+    "tabWidth": 2,
+    "printWidth": 120
   },
   "husky": {
     "hooks": {
