--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -4,15 +4,57 @@ env:
   commonjs: false
   jest: true
 extends:
+  - airbnb-base
+  - prettier
   - plugin:@typescript-eslint/recommended
-  - plugin:prettier/recommended
-globals:
-  Atomics: readonly
-  SharedArrayBuffer: readonly
+  - plugin:sonarjs/recommended
+  - plugin:security/recommended
 parser: '@typescript-eslint/parser'
 parserOptions:
-  ecmaVersion: 2018
+  ecmaVersion: latest
   sourceType: module
 plugins:
   - '@typescript-eslint'
-rules: {}
+  - prettier
+  - eslint-plugin-import-helpers
+  - sonarjs
+  - security
+settings:
+  import/resolver:
+    node:
+      extensions: [".js", ".jsx", ".ts", ".tsx"]
+globals:
+  Atomics: readonly
+  SharedArrayBuffer: readonly
+rules:
+  prettier/prettier:
+    - error
+    - singleQuote: true
+      trailingComma: es5
+      semi: true
+      tabWidth: 4
+      printWidth: 120
+  import-helpers/order-imports:
+    - warn
+    - newlinesBetween: 'always'
+      groups:
+        - 'module'
+        - '/^@pulumi/'
+        - '/^@soufantech/'
+        - ['parent', 'sibling', 'index']
+      alphabetize:
+        order: 'asc'
+        ignoreCase: true
+  import/extensions:
+    - error
+    - ignorePackages
+    - js: never
+      jsx: never
+      ts: never
+      tsx: never
+overrides:
+  - files:
+      - src/**/*.test.ts
+    rules:
+      sonarjs/no-duplicate-string: off
+
