--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "start": "ts-node src/index.ts",
     "watch": "ts-node-dev src/index.ts",
     "test": "jest --pass-with-no-tests",
-    "lint": "tsc --noEmit && eslint ./src/**/*.{ts,tsx}",
+    "lint": "tsc --noEmit && eslint './src/**/*' --ext .ts",
     "clear": "rm -rf dist",
     "prebuild": "npm run clear",
     "build": "tsc -p ./tsconfig.build.json",
@@ -48,7 +48,10 @@
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-import-helpers": "^1.2.1",
     "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-security": "^1.4.0",
+    "eslint-plugin-sonarjs": "^0.11.0",
     "husky": "^7.0.4",
     "jest": "^26.1.0",
     "prettier": "^2.0.5",
@@ -57,13 +60,6 @@
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.4",
     "typescript-eslint": "^0.0.1-alpha.0"
-  },
-  "prettier": {
-    "semi": true,
-    "trailingComma": "all",
-    "singleQuote": true,
-    "tabWidth": 2,
-    "printWidth": 120
   },
   "config": {
     "commitizen": {
